# django-celery-result-signal-example

./: .dockerignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  tasks.py
project/: settings.py  urls.py
project/app/: views.py
