[tool.poetry]
name = "celsig"
version = "0.0.1"
description = ""
authors = ["nothink"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4"
django-celery-results = "^2"
celery = "^5"

[tool.poetry.dev-dependencies]
flake8 = "^4"
black = "^22"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
